--- a/docs/01.mdx
+++ b/docs/01.mdx
@@ -617,7 +617,7 @@ class ComedyCalculator extends PerformanceCalculator {
 일단 이 유명한 책의 내 첫 느낌은 문화 충격이다. 이 책을 읽기전에 나는 리팩터링이라는 책 제목에 대해서
 좀 추상적인 내용일 수 있다고 생각했다. 아직 챕터 1밖에 읽지 않았지만 이 책에서는 리팩터링을 매우 체계적으로 접근한다.  
 솔직히 너무 신기했다. `함수 추출하기`, `변수 인라인하기`, `조건부 로직을 다형성으로 바꾸기`등 정말 신기하고 재밌었다.
-분명 나는 하나의 예제를 봤지만 그 코드를 어떻게 씹고 뜯고 맛보고 즐기는 과정을 통해 소화시키는 과정(리팩토링)을 배운 것 같다.  
+분명 나는 하나의 예제를 봤지만 그 코드를 씹고 뜯고 맛보고 즐기는 과정을 통해 소화시키는 과정(리팩토링)을 배운 것 같다.  
 즐거웠다.
 
 마지막으로 하나 꼭 기억해야 할 말이 있는 것 같다.
